Set comment inputs to 100%, fixes misaligned boxes; remove margin on checkboxes; add a wrapper div & move subscribe buttons into slide-out.

--- a/less/style.less
+++ b/less/style.less
@@ -485,7 +485,7 @@ li.comment li.comment {
 	input, textarea {
 		.box-sizing;
 		padding: 7px;
-		max-width: 100%;
+		width: 100%;
 		font-size: 12px;
 		font-size: 1.2rem;
 		line-height: 1.2;
@@ -504,6 +504,7 @@ li.comment li.comment {
 	button,
 	input[type='submit'],
 	input[type='reset'] {
+		width: auto;
 		font-size: 13px;
 		font-size: 1.3rem;
 		border: none;
@@ -526,6 +527,10 @@ li.comment li.comment {
 }
 .comment-form-email {
 	padding-left: 15px;
+}
+
+.comment-subscription-form {
+	margin-bottom: 0;
 }
 
 #submit {
